--- a/experiments/SS_AE_Learned(VGG19)_LA/config.yaml
+++ b/experiments/SS_AE_Learned(VGG19)_LA/config.yaml
@@ -12,8 +12,8 @@ TRAIN:
   unseens: 50
 
   # For optimizer
-  optimizer: adam
-  lr: 0.0001
+  optimizer: sgd
+  lr: 0.001
   momentum: 0.9
   weight_decay: 5e-4
 
@@ -22,9 +22,9 @@ TRAIN:
 
   # Hyper-parameters of the paper
   num_attributes: 312
-  augmented: False
+  augmented: True
   num_scales: 1
   pretrained: True
 
 VAL:
-  evaluate: 'ua'
+  evaluate: 'la'
